--- a/public/index.html
+++ b/public/index.html
@@ -3,11 +3,11 @@
   <head>
     <meta charset="utf-8"/>
     <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <title>Boilerplate</title>
+    <title>Expensify</title>
   </head>
   <body>
     <div id="app">
     </div>
-    <script src="/bundle.js"></script>
+    <script src="/dist/bundle.js"></script>
   </body>
 </html>
